--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         <a href="https://puginarug.com/">Länk 3</a>
         <h1 id="topRubrik">Rubrik</h1>
     </div>
+
+    <div id="mellan">
+        <h1 id="vRubrik">Vänster Rubrik</h1>
+        <h1 id="hRubrik">Höger Rubrik</h1>
+    </div>
 </body>
 </html>
